--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget11/tables-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget11/tables-widget11.component.html
@@ -68,7 +68,7 @@
             <th class="min-w-125px">Value Of Credit Payment Txn</th>
             <th class="min-w-125px">No. Of Credit Payment Txn</th>
             <th class="min-w-125px">Active Cust Count For Credit Payment Txn</th>
-            <th class="min-w-125px">No. Of Credit Payment Txn</th>
+            <!-- <th class="min-w-125px">No. Of Credit Payment Txn</th> -->
           </tr>
         </thead>
         <!-- end::Table head -->
@@ -83,8 +83,8 @@
             <td> {{ data.payment | number:'1.2-2' }}</td>
             <td> {{ data.payCount | number:'1.2-2'}} </td>
             <td> {{ data.activePayCust | number:'1.2-2' }} </td>
-            <td> {{ data.balance | number:'1.2-2' }}
-            </td>
+            <!-- <td> {{ data.balance | number:'1.2-2' }} </td>-->
+            
           </tr>
 
         </tbody>
