--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget7/tables-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget7/tables-widget7.component.html
@@ -54,8 +54,8 @@
             <th class="min-w-125px">Month</th>
             <th class="min-w-125px">Cr Sales</th>
             <th class="min-w-125px">Cr Payments</th>
-            <th class="min-w-125px">Toll Recharge</th>
-            <th class="min-w-125px">Toll Payments</th>
+            <th class="min-w-125px">Toll Recharge(Credit)</th>
+            <th class="min-w-125px">Toll Payments(Debit)</th>
           </tr>
         </thead>
         <!-- end::Table head -->
