--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget1/stats-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget1/stats-widget1.component.html
@@ -14,7 +14,7 @@
                     <div class="card mb-3">
                         <marquee style="color: red;">Please Select Date Range between Financial Year..!</marquee>
                         <div class="card-header">
-                            <h3><b>ONBOARD REPORT FOR VEELSPLUS</b></h3>
+                            <h3><b>ONBOARD REPORT</b></h3>
                         </div>
                         <div class="card-body table-responsive">
 
@@ -204,7 +204,7 @@
 
                     <div class="card mb-3">
                         <div class="card-header">
-                            <h3><b>PURCHASE REPORT</b></h3>
+                            <h3><b>PURCHASE REPORT (FUELIN)</b></h3>
                         </div>
                         <div class="card-body table-responsive">
                             <div class="row">
@@ -286,7 +286,7 @@
                             <br><br><br>
                         </div>
                         <div class="card-header">
-                            <h3><b>SALES PAYMENT REPORT</b></h3>
+                            <h3><b>SALES PAYMENT REPORT (FUELIN)</b></h3>
                         </div>
                         <div class="card-body table-responsive">
                             <div class="row">
@@ -341,7 +341,7 @@
                     <!--FC By PAN report starts Dealer -->
                     <div class="card mb-3">
                         <div class="card-header">
-                            <h3><b>FUEL CREDIT REPORT FOR VEELSPLUS</b></h3>
+                            <h3><b>FUEL CREDIT REPORT (FUELIN)</b></h3>
                         </div>
                         <div class="card-body table-responsive">
                             <div class="row">
@@ -430,7 +430,7 @@
                     </div>
                     <div class="card mb-3">
                         <div class="card-header">
-                            <h3><b>FASTAG REPORT FOR VEELSPLUS</b></h3>
+                            <h3><b>FASTAG REPORT - YES BANK</b></h3>
                         </div>
                         <div class="card-body table-responsive">
                             <div class="row">
@@ -530,7 +530,7 @@
                     </div>
                     <div class="card mb-3">
                         <div class="card-header">
-                            <h3><b>FASTAG LQ REPORT FOR VEELSPLUS</b></h3>
+                            <h3><b>FASTAG REPORT - LQ</b></h3>
                         </div>
                         <div class="card-body table-responsive">
                             <div class="row">
