changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget1/stats-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget1/stats-widget1.component.html
@@ -32,7 +32,7 @@
 
                             <div class="row">
                                 <div class="col-md-3">
-                                    <p><b>Dealer Added Transporter Report</b></p>
+                                    <p><b>DealerWise Transporter Report</b></p>
                                 </div>
                                 <div class="col-md-2">
                                     <input class="form-control" placeholder="DD-MM-YYYY" readonly
@@ -53,7 +53,7 @@
                             <br>
                             <div class="row">
                                 <div class="col-md-3">
-                                    <p><b>Onboard Corporate Report</b></p>
+                                    <p><b>TransporterWise Vehicle Report</b></p>
                                 </div>
                                 <div class="col-md-2">
                                     <input class="form-control" placeholder="DD-MM-YYYY" readonly
@@ -73,7 +73,7 @@
                                 </div>
                             </div>
                             <br>
-                            <div class="row">
+                            <!-- <div class="row">
                                 <div class="col-md-3">
                                     <p><b>Admin Dealer Onboard Report</b></p>
                                 </div>
@@ -93,11 +93,11 @@
                                     <button class="btn btn-outline-success my-2 my-sm-0 btn-sm"
                                         (click)="getDealerOnboardReport()">Download</button>
                                 </div>
-                            </div>
-                            <br>
+                            </div> -->
+                            <!-- <br> -->
                             <div class="row">
                                 <div class="col-md-3">
-                                    <p><b>Self Dealer Onboard Report</b></p>
+                                    <p><b>Dealer Onboard Report</b></p>
                                 </div>
                                 <div class="col-md-2">
                                     <input class="form-control" placeholder="DD-MM-YYYY" readonly
@@ -177,7 +177,8 @@
                             <br>
                             <div class="row">
                                 <div class="col-md-3">
-                                    <p><b>Selected Date Report</b></p>
+                                    <!-- <p><b>Selected Date Report</b></p> -->
+                                    <p><b>BackDated Tx Report</b></p>
                                 </div>
                                 <div class="col-md-2">
                                     <input class="form-control" placeholder="DD-MM-YYYY"
@@ -226,7 +227,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-2">
-                                    <p><b>Purchase Report</b></p>
+                                    <p><b>Dealer Purchase Monthwise Report</b></p>
                                 </div>
                                 <div class="col-md-2">
                                     <select class="form-select" formControlName="startMonth">
@@ -358,7 +359,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-3">
-                                    <p><b>Purchase Report</b></p>
+                                    <p><b>Dealer Cr Sales Report</b></p>
                                 </div>
                                 <!-- date format changed 20-01-2022  -->
                                 <div class="col-md-2">
@@ -381,7 +382,7 @@
                             <br>
                             <div class="row">
                                 <div class="col-md-3">
-                                    <p><b>Purchase CR Report For Transporter</b></p>
+                                    <p><b>Transporter CR Purchase Report </b></p>
                                 </div>
                                 <div class="col-md-2">
                                     <input class="form-control" placeholder="DD-MM-YYYY" readonly
@@ -406,7 +407,7 @@
                             <br>
                             <div class="row">
                                 <div class="col-md-3">
-                                    <p><b>Payment Report</b></p>
+                                    <p><b>Dealer Payment Report</b></p>
                                 </div>
                                 <div class="col-md-2">
                                     <input class="form-control" placeholder="DD-MM-YYYY" readonly
