--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget24/tables-widget24.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget24/tables-widget24.component.html
@@ -27,11 +27,11 @@
                     </tr>
                 </thead>
 
-                <tbody
-                    *ngFor="let data of demoDealerData | paginate: { itemsPerPage: 10, currentPage: p, totalItems: total }; let i = index">
-                    <tr>
+                <tbody>
+                    <tr
+                    *ngFor="let data of demoDealerData | paginate: { itemsPerPage: 10, currentPage: p, totalItems: total };">
                         <td>{{data.FuelVeelsId}}</td>
-                        <td>{{data.customerCreatedAt | date:"d MMM, yyyy"}}</td>
+                        <td>{{data.customerCreatedAt | date:"medium"}}</td>
                         <td>{{data.companyName}}</td>
                         <td>{{data.brandName}}</td>
                         <td>{{data.hostName}}</td>
