--- a/src/app/pages/onboarding/dealerOnboarding/demo-removed/demo-removed.component.html
+++ b/src/app/pages/onboarding/dealerOnboarding/demo-removed/demo-removed.component.html
@@ -1,7 +1,7 @@
 <br>
 <!-- ADMIN Login accessGroupId 7 -->
 <div *ngIf="isAdmin">
-    <ul ngbNav #dashboard="ngbNav" [activeId]="1" class="nav-tabs nav-tabs-custom nav-justified" style="width: 100%;">
+    <ul ngbNav #demo="ngbNav" [activeId]="1" class="nav-tabs nav-tabs-custom nav-justified" style="width: 100%;">
       <li [ngbNavItem]="1">
         <a ngbNavLink>
           <span class="d-none d-sm-block" style="font-size: 15px;">DEMO </span>
@@ -19,5 +19,5 @@
         </ng-template>
       </li>
     </ul>
-    <div [ngbNavOutlet]="dashboard"></div>
+    <div [ngbNavOutlet]="demo"></div>
   </div>
