changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget5/tables-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget5/tables-widget5.component.html
@@ -86,7 +86,7 @@
       </thead>
       <!-- end::Table head -->
       <!-- begin::Table body -->
-      <tbody *ngFor="let data of posArray; let i = index">
+      <tbody *ngFor="let data of fuelTerminalDataList; let i = index">
         <tr>
           <td> {{ i + 1 }} </td>
 
