--- a/src/app/_metronic/partials/layout/modals/modal3/modal3.component.html
+++ b/src/app/_metronic/partials/layout/modals/modal3/modal3.component.html
@@ -129,7 +129,7 @@
 
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-outline-success" (click)="submit()">
+      <button type="button" class="btn btn-outline-success" (click)="addBankDetails()">
         Submit
       </button>
       <button type="button" class="btn btn-outline-danger" (click)="close()">
